# liv

./: pyproject.toml
liv/: __main__.py  liv.py
liv/web/: index.html  main.js
